UX: fix solution alignment on mobile (#148)

--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -46,6 +46,7 @@ $solved-color: green;
   font-size: $font-up-1;
   span {
     display: inline-block;
+    padding: 8px 1px;
   }
   .accepted-label {
     margin-left: 7px;
